# imiss-deer-flow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .semgrepignore  CONTRIBUTING.md  Makefile  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  audit-direct-env.sh  backend-dependencies2.txt  backend-harness-dependencies.txt  bge-m3-service.md  check_versions.sh  code-rag-dependencies.txt  config.example.yaml  config.yaml  dependency-files.txt  docker-system-dependencies.txt  elasticsearch-manage.sh  extensions_config.example.json  external-services.txt  findings.md  frontend-prod-dependencies.txt  location-matcher-dependencies.txt  model-services启动说明.md  progress.md  task_plan.md  video_subtitle_viewer.html  完成.txt  服务器配置登录GitHub教程.md  本地数据集类型接入教程.md  笔记.md  网络流量分析示例问题清单.md  记录.md  部署启动.md
elasticsearch/code-rag/: README_zh.md  SKILL.md  config.example.yaml  pyproject.toml
elasticsearch/code-rag/code_rag_elasticsearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
elasticsearch/code-rag/scripts/: code_chunker.py  code_embedding.py  code_get_mapping.py  code_indexer.py  code_list_indices.py  code_query_dsl.py  code_retrieve_topk.py  es_common.py  smoke_test_code_rag.py
elasticsearch/code-rag/scripts/test/: test_code_rag_scripts.py
elasticsearch/location-matcher/: SKILL.md  pyproject.toml
elasticsearch/location-matcher/scripts/: es_get_mapping.py  es_list_indices.py  es_retrieve_topk.py  model_service_doc.md  reverse_geocoding.py
elasticsearch/location-matcher/scripts/test/: README.md  TEST_SUMMARY.md  test_scripts_execution.py
(+1289 files in other folders)
