[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-rag-elasticsearch"
version = "0.1.0"
description = "Elasticsearch-backed code chunk retrieval scripts for DeerFlow"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8,<9",
  "pyyaml>=6",
  "sentence-transformers>=3",
]

[tool.setuptools]
packages = []
