[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "location-matcher-skill"
version = "0.1.0"
description = "Location matcher skill dependencies and scripts for DeerFlow"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8,<9",
  "requests",
]

[tool.setuptools]
packages = []
